--- a/services/multimedia/audio/codec/fdkaac_codec/README
+++ b/services/multimedia/audio/codec/fdkaac_codec/README
@@ -1,3 +1,5 @@
 NOTICE:
-The Third-Party Modified Version of the Fraunhofer FDK AAC Codec Library for Android is modifyed by BES at 2018.08.22.
-The base version about FDK AAC is e45ae429b9ca8f234eb861338a75b2d89cde206a
+This Third-Party Modified Version of the Fraunhofer FDK AAC Codec Library for
+Android is modified by the OpenPineBuds project on 2023.11.10.
+
+The base version of the FDK AAC is e45ae429b9ca8f234eb861338a75b2d89cde206a
